# Examples_CSharp

./: .gitignore  CMakeLists.txt  CSharpExamples.sln  README.md
CMake/: CMakeLists.txt
CMake/Console/: CMakeLists.txt
CMake/Winforms/: CMakeLists.txt
Demos/Button/: Button.cs  Button.csproj
Demos/CheckBox/: CheckBox.csproj  CheckBoxDemo.cs
DesignPatterns/: README.md
DesignPatterns/AbstractFactory/: AbstractFactory.cs  AbstractFactory.csproj  README.md
Microsoft.VisualStudio.TestTools.UnitTesting/: README.md
Microsoft.VisualStudio.TestTools.UnitTesting/Assert/: Assert.cs  Assert.csproj
Microsoft.VisualStudio.TestTools.UnitTesting/TestClass/: TestClass.cs  TestClass.csproj
System/: README.md
System.Core/: README.md
System.Drawing/: README.md
System.Drawing/Bmp/: Bmp.cs  Bmp.csproj
System.Drawing/Color/: Color.cs  Color.csproj  Color2.cs
System.Drawing/Png/: Png.csproj
System.Windows.Forms/: README.md
System.Windows.Forms/Application/: Application.cs  Application.csproj  README.md
System.Windows.Forms/ApplicationEnableVisualStyle/: ApplicationEnableVisualStyle.cs  ApplicationEnableVisualStyle.csproj  README.md
System.Windows.Forms/ApplicationIcon/: ApplicationIcon.csproj  README.md
System.Windows.Forms/ApplicationIdle/: ApplicationIdle.cs  ApplicationIdle.csproj
System.Windows.Forms/Button/: Button.cs  Button.csproj  README.md
System.Windows.Forms/Button2/: Button2.cs  Button2.csproj  README.md
System.Windows.Forms/CheckBox/: CheckBox.cs  CheckBox.csproj  README.md
System.Windows.Forms/CheckedListBox/: CheckedListBox.cs  CheckedListBox.csproj  README.md
System.Windows.Forms/ColorDialog/: ColorDialog.cs  ColorDialog.csproj  README.md
System.Windows.Forms/ColoredForms/: ColoredForms.cs  ColoredForms.csproj
System.Windows.Forms/ColoredTabPages/: ColoredTabPages.cs  ColoredTabPages.csproj
System.Windows.Forms/Colors/: Colors.cs  Colors.csproj
System.Windows.Forms/ComboBox/: ComboBox.cs  ComboBox.csproj  README.md
System.Windows.Forms/Control/: Control.cs  Control.csproj  README.md
System.Windows.Forms/Cursors/: Cursors.cs  Cursors.csproj
System.Windows.Forms/DateTimePicker/: DateTimePicker.cs  DateTimePicker.csproj  README.md
mscorelib/: CMakeLists.txt  README.md
mscorelib/Action/: Action.csproj  CMakeLists.txt  README.md
mscorelib/Action/Action/: CMakeLists.txt
mscorelib/Action/Action1/: Action1.csproj  CMakeLists.txt  README.md
mscorelib/Action/Action1/src/: Action1.cs
mscorelib/Action/Action2/: Action2.csproj
mscorelib/Action/Action3/: Action3.csproj
mscorelib/Action/Properties/: AssemblyInfo.cs
mscorelib/Console/: CMakeLists.txt  Console.cs  Console.csproj  README.md
mscorelib/Console/Console/: CMakeLists.txt  README.md
mscorelib/Console/Console/src/: Console.cs
mscorelib/Console/ConsoleBackColor/: ConsoleBackColor.cs
mscorelib/Console/ConsoleBackgroundColor/: CMakeLists.txt  README.md
mscorelib/Console/ConsoleBackgroundColor/src/: ConsoleBackgroundColor.cs
mscorelib/Console/ConsoleBackgroundColor2/: CMakeLists.txt  README.md
mscorelib/Console/ConsoleBeep/: CMakeLists.txt  ConsoleBeep.csproj  README.md
mscorelib/Console/ConsoleBeep/src/: ConsoleBeep.cs
mscorelib/Console/ConsoleBeep2/: CMakeLists.txt  ConsoleBeep2.cs  README.md
mscorelib/Console/ConsoleColor/: CMakeLists.txt  README.md
mscorelib/Console/ConsoleColor/src/: ConsoleColor.cs
mscorelib/Console/ConsoleForegroundColor/: CMakeLists.txt  README.md
mscorelib/Console/ConsoleUnicode/: CMakeLists.txt  ConsoleUnicode.csproj  README.md
mscorelib/Delegates/Action3/: CMakeLists.txt  README.md
mscorelib/Delegates/Action3/src/: Action3.cs
mscorelib/HelloWorlds/HelloWorld2/: CMakeLists.txt  HelloWorld2.cs  HelloWorld2.csproj  README.md
(+348 files in other folders)
