cmake_minimum_required(VERSION 3.20)

project(Console)
add_subdirectory(Console)
add_subdirectory(ConsoleBackgroundColor)
add_subdirectory(ConsoleBackgroundColor2)
add_subdirectory(ConsoleBeep)
add_subdirectory(ConsoleBeep2)
add_subdirectory(ConsoleColor)
add_subdirectory(ConsoleForegroundColor)
add_subdirectory(ConsoleUnicode)
